# --IVS---totojepublicgithubprotozenemuzemeprizvatvicnez3clenydoprojektuTakzetentonazevbyhomohlchranit

./: .gitignore  Makefile  README.md  hodnoceni.txt  readme  skutecnost.txt
backend/: readme.md
backend/src/: main.cpp  readme.md
backend/src/inc/: backend.h
doc/: readme.md
frontend/: readme.md
frontend/src/: frontend.cpp  main.cpp  readme.md
install/kd-kalkulator_1.0.0-ubuntu/DEBIAN/: control  postinst
install/kd-kalkulator_1.0.0-ubuntu/usr/share/applications/: kd-calculator-uninstaler.desktop  kd-calculator.desktop
mockup/: readme.md
plan/: xklism00_xflekd00_xsladk09_xsirok09_plan.txt
profiling/callgrind/: callgrind.out.32569  callgrind.out.32581  callgrind.out.32590
profiling/data/: data_10.txt  data_100.txt  data_1000.txt
profiling/gprof/: report_10.dot  report_10.txt  report_100.dot  report_100.txt  report_1000.dot  report_1000.txt
src/: CMakeLists.txt  Calculator.pro  Doxyfile  Makefile  help.qrc  helpdiag.h  helpdialog.h  helpdialog.ui  ivs.cpp  ivs.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  operator.cpp  operator.h
src/backend/: backend.cpp  readme.md
src/frontend/: readme.md
src/frontend/inc/: frontend.h
src/ivs/: ivs.cpp  ivs.h  ivs.pro  ivs.ui  main.cpp
src/lib/: Math.cpp  Math.h
src/standard_deviation/: stddev.cpp
src/tests/: CMakeLists.txt  MathTest.cpp
